infrastructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <name>-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <name>
  template:
    metadata:
      labels:
        app: <name>
    spec:
      containers:
        - name: <name>
          image: <path-image>

---
apiVersion: v1
kind: Service
metadata:
  name: <name>-service
spec:
  selector:
    app: auth
  ports:
    - name: <name>
      protocol: TCP
      port: 3000
      targetPort: 3000
